--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@mui/material": "^5.0.1",
+    "@react-hook/window-size": "^3.0.7",
     "framer-motion": "^4.1.17",
     "hamburger-react": "^2.4.1",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.1",
+    "react-leaflet": "^3.2.1",
+    "react-leaflet-enhanced-marker": "^1.0.21",
     "react-render-counter": "^1.0.1",
     "react-reveal": "^1.2.2",
     "react-simple-maps": "^2.3.0",
@@ -31,6 +36,7 @@
     "swiper": "^7.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.5",
     "@types/react": "17.0.24",
     "@zeit/next-sass": "^1.0.1",
     "eslint": "7.32.0",
