--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flags-select": "^2.1.2",
     "react-image-lightbox": "^5.1.4",
     "react-intersection-observer": "^8.32.1",
     "react-leaflet": "^3.2.1",
