--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@mui/material": "^5.0.1",
     "@react-hook/window-size": "^3.0.7",
+    "@types/react-html-parser": "^2.0.2",
     "framer-motion": "^4.1.17",
     "hamburger-react": "^2.4.1",
     "leaflet": "^1.7.1",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-flags-select": "^2.1.2",
     "react-image-lightbox": "^5.1.4",
@@ -34,6 +36,7 @@
     "react-reveal": "^1.2.2",
     "react-simple-maps": "^2.3.0",
     "react-svg-tooltip": "0.0.11",
+    "react-typing-effect": "^2.0.5",
     "react-world-countries-map": "^1.1.0",
     "sass": "^1.42.1",
     "swiper": "^7.0.7"
