--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.0.1",
     "@react-hook/window-size": "^3.0.7",
     "@types/react-html-parser": "^2.0.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "hamburger-react": "^2.4.1",
     "leaflet": "^1.7.1",
