--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-flags-select": "^2.1.2",
+    "react-height": "^3.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-intersection-observer": "^8.32.1",
     "react-leaflet": "^3.2.1",
